--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,5 +1,9 @@
+@import '../libs/vars';
+@import '../libs/functions';
+@import '../libs/mixins';
+
 ///
-/// Solid State by HTML5 UP
+/// Identity by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -9,34 +13,20 @@
 	form {
 		margin: 0 0 _size(element-margin) 0;
 
-		.field {
+		> .field {
 			margin: 0 0 _size(element-margin) 0;
 
-			label {
-				margin-top: _size(element-margin) * -0.75;
+			> :last-child {
+				margin-bottom: 0;
 			}
-
-			&:first-child {
-				label {
-					margin-top: 0;
-				}
-			}
-		}
-
-		> :last-child {
-			margin-bottom: 0;
 		}
 	}
 
 	label {
 		color: _palette(fg-bold);
 		display: block;
-		font-family: _font(family-heading);
-		font-size: 0.8em;
-		font-weight: _font(weight-heading-bold);
-		letter-spacing: _font(kern-heading);
-		margin: 0 0 (_size(element-margin) * 0.35) 0;
-		text-transform: uppercase;
+		font-size: 0.9em;
+		margin: 0 0 (_size(element-margin) * 0.5) 0;
 	}
 
 	input[type="text"],
@@ -46,10 +36,8 @@
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
-		background: _palette(border-bg);
 		border-radius: _size(border-radius);
-		border: none;
-		border: solid 2px _palette(border);
+		border: solid 1px _palette(border);
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -62,18 +50,17 @@
 		}
 
 		&:focus {
-			border-color: desaturate(lighten(_palette(accent), 6), 3);
+			border-color: _palette(highlight);
 		}
 	}
 
 	.select-wrapper {
-		@include icon;
+		@include icon('\f078');
 		display: block;
 		position: relative;
 
 		&:before {
 			color: _palette(border);
-			content: '\f078';
 			display: block;
 			height: _size(element-height);
 			line-height: _size(element-height);
@@ -87,13 +74,6 @@
 
 		select::-ms-expand {
 			display: none;
-		}
-	}
-
-	select {
-		option {
-			color: _palette(fg-bold);
-			background: _palette(bg);
 		}
 	}
 
@@ -124,9 +104,6 @@
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
-			font-family: _font(family);
-			text-transform: none;
-			letter-spacing: 0;
 			font-weight: _font(weight);
 			padding-left: (_size(element-height) * 0.6) + 0.75em;
 			padding-right: 0.75em;
@@ -135,7 +112,7 @@
 			&:before {
 				background: _palette(border-bg);
 				border-radius: _size(border-radius);
-				border: solid 2px _palette(border);
+				border: solid 1px _palette(border);
 				content: '';
 				display: inline-block;
 				height: (_size(element-height) * 0.6);
@@ -143,23 +120,21 @@
 				line-height: (_size(element-height) * 0.575);
 				position: absolute;
 				text-align: center;
-				top: 0;
+				top: 0.15em;
 				width: (_size(element-height) * 0.6);
 			}
 		}
 
 		&:checked + label {
 			&:before {
-				background: _palette(fg-bold);
-				border-color: _palette(fg-bold);
+				color: _palette(highlight);
 				content: '\f00c';
-				color: _palette(bg);
 			}
 		}
 
 		&:focus + label {
 			&:before {
-				border-color: _palette(accent);
+				border-color: _palette(highlight);
 			}
 		}
 	}
@@ -200,7 +175,7 @@
 		opacity: 1.0;
 	}
 
-	.polyfill-placeholder {
+	.formerize-placeholder {
 		color: _palette(fg-light) !important;
 		opacity: 1.0;
 	}
