--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,10 +3,10 @@
 @import 'libs/mixins';
 @import 'libs/skel';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300');
 
 /*
-	Solid State by HTML5 UP
+	Identity by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -14,22 +14,41 @@
 	@include skel-breakpoints((
 		xlarge: '(max-width: 1680px)',
 		large: '(max-width: 1280px)',
-		medium: '(max-width: 980px)',
+		medium: '(max-width: 960px)',
 		small: '(max-width: 736px)',
-		xsmall: '(max-width: 640px)',
+		xsmall: '(max-width: 480px)',
 		xxsmall: '(max-width: 360px)'
 	));
 
 	@include skel-layout((
 		reset: 'full',
-		boxModel: 'border',
-		grid: ( gutters: 1.75em ),
-		breakpoints: (
-			small: (
-				grid: ( gutters: 1.25em )
-			)
-		)
+		boxModel: 'border'
 	));
+
+	@mixin icon-alt($content: false, $link: false) {
+		@include icon($content);
+		$size: _size(border-width) * 1.25;
+
+		&:before {
+			color: _palette(bg);
+			text-shadow: $size 0px 0px _palette(border),
+						($size * -1) 0px 0px _palette(border),
+						0px $size 0px _palette(border),
+						0px ($size * -1) 0px _palette(border);
+
+		}
+
+		@if $link {
+			&:hover {
+				&:before {
+					text-shadow: $size 0px 0px _palette(highlight),
+								($size * -1) 0px 0px _palette(highlight),
+								0px $size 0px _palette(highlight),
+								0px ($size * -1) 0px _palette(highlight);
+				}
+			}
+		}
+	}
 
 // Base.
 
@@ -38,20 +57,13 @@
 
 // Component.
 
-	@import 'components/section';
 	@import 'components/form';
-	@import 'components/box';
 	@import 'components/icon';
-	@import 'components/image';
 	@import 'components/list';
-	@import 'components/table';
 	@import 'components/button';
-	@import 'components/features';
 
 // Layout.
 
-	@import 'layout/header';
-	@import 'layout/menu';
-	@import 'layout/banner';
-	@import 'layout/wrapper';
+	@import 'layout/main';
 	@import 'layout/footer';
+	@import 'layout/wrapper';
